--- a/package.json
+++ b/package.json
@@ -20,5 +20,12 @@
   "bugs": {
     "url": "https://github.com/nodium/neo4j/issues"
   },
-  "homepage": "https://github.com/nodium/neo4j"
+  "homepage": "https://github.com/nodium/neo4j",
+  "devDependencies": {
+    "gulp": "~3.8.10",
+    "gulp-uglify": "~1.1.0",
+    "gulp-rename": "~1.2.0",
+    "browserify": "~8.1.3",
+    "vinyl-source-stream": "~1.0.0"
+  }
 }
