--- a/package.json
+++ b/package.json
@@ -22,10 +22,17 @@
   },
   "homepage": "https://github.com/nodium/neo4j",
   "devDependencies": {
-    "gulp": "~3.8.10",
-    "gulp-uglify": "~1.1.0",
-    "gulp-rename": "~1.2.0",
     "browserify": "~8.1.3",
+    "d3": "^3.5.4",
+    "gulp": "~3.8.10",
+    "gulp-rename": "~1.2.0",
+    "gulp-uglify": "~1.1.0",
+    "jquery": "^2.1.3",
+    "lodash": "^3.1.0",
+    "mocha": "^2.1.0",
     "vinyl-source-stream": "~1.0.0"
+  },
+  "dependencies": {
+    "seraph": "^0.9.12"
   }
 }
