--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/nodium/neo4j",
   "devDependencies": {
     "browserify": "~8.1.3",
+    "chai-as-promised": "^4.1.1",
     "d3": "^3.5.4",
     "gulp": "~3.8.10",
     "gulp-rename": "~1.2.0",
