--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   "homepage": "https://github.com/nodium/neo4j",
   "devDependencies": {
     "browserify": "~8.1.3",
+    "browserify-shim": "^3.8.2",
     "chai-as-promised": "^4.1.1",
     "d3": "^3.5.4",
     "gulp": "~3.8.10",
+    "gulp-plumber": "^0.6.6",
     "gulp-rename": "~1.2.0",
     "gulp-uglify": "~1.1.0",
     "jquery": "^2.1.3",
@@ -35,5 +37,11 @@
   },
   "dependencies": {
     "seraph": "^0.9.12"
+  },
+  "browserify": {
+    "transform": ["browserify-shim"]
+  },
+  "browserify-shim": {
+    "underscore": "lodash"
   }
 }
